# VibeVoice-FastAPI

./: .dockerignore  .gitignore  DEPLOYMENT.md  Dockerfile  FLASH_ATTENTION.md  README.md  docker-compose.yml  pyproject.toml  test_api_simple.py  test_model_load.py  test_voice_service.py
api/: config.py  dependencies.py  logging_config.py  main.py
api/core/: connection_manager.py  voice_service.py
api/middleware/: __init__.py  cors.py  logging.py  rate_limit.py  timeout.py
api/models/: errors.py  requests.py  responses.py  streaming.py
api/monitoring/: __init__.py  background_tasks.py  gpu_monitor.py  metrics.py  middleware.py
api/routes/: health.py  metrics.py  voice.py  websocket.py
api/utils/: audio.py  streaming.py
deployment/: docker-compose.production.yml  install.sh  nginx.conf  prometheus.yml  proxy_params.conf  rate_limit.conf  websocket_params.conf
deployment/systemd/: vibevoice.service
monitoring/: README.md  alert_rules.yml  alertmanager.yml  docker-compose.monitoring.yml  grafana-dashboard.json  prometheus.yml  recording_rules.yml
monitoring/grafana-provisioning/dashboards/: dashboards.yml
monitoring/grafana-provisioning/datasources/: datasources.yml
scripts/: copy_voices.sh  docker_build.sh  docker_run.sh
static/: index.html
static/css/: style.css
static/js/: app.js  websocket.js
tests/: conftest.py  test_api.py  test_config.py  test_logging.py  test_middleware.py  test_models.py  test_monitoring.py  test_voice_service.py  test_websocket.py  test_websocket_middleware_compatibility.py
voices/: metadata.json
